@@ -78,7 +78,7 @@ public class HTTPSServer extends Server {
         httpHandler.setAfterTheDeadlineMode(config.getAfterTheDeadlineLanguage());
       }
       server.createContext("/", httpHandler);
-      executorService = getExecutorService(workQueue);
+      executorService = getExecutorService(workQueue, config);
       server.setExecutor(executorService);
     } catch (BindException e) {
       final ResourceBundle messages = JLanguageTool.getMessageBundle();
@@ -147,6 +147,7 @@ public class HTTPSServer extends Server {
       System.out.println("                 'afterTheDeadlineLanguage' - language code like 'en' or 'en-GB' (required if mode is 'AfterTheDeadline')");
       System.out.println("                 'maxTextLength' - maximum text length, longer texts will cause an error (optional)");
       System.out.println("                 'maxCheckTimeMillis' - maximum time in milliseconds allowed per check (optional)");
+      System.out.println("                 'maxCheckThreads' - maximum number of threads working in parallel (optional)");
       System.out.println("                 'requestLimit' - maximum number of requests (optional)");
       System.out.println("                 'requestLimitPeriodInSeconds' - time period to which requestLimit applies (optional)");
       printCommonOptions();
