@@ -103,7 +103,7 @@ public class HTTPServer extends Server {
         httpHandler.setAfterTheDeadlineMode(config.getAfterTheDeadlineLanguage());
       }
       server.createContext("/", httpHandler);
-      executorService = getExecutorService(workQueue);
+      executorService = getExecutorService(workQueue, config);
       server.setExecutor(executorService);
     } catch (Exception e) {
       final ResourceBundle messages = JLanguageTool.getMessageBundle();
@@ -128,6 +128,7 @@ public class HTTPServer extends Server {
       System.out.println("                 'afterTheDeadlineLanguage' - language code like 'en' or 'en-GB' (required if mode is 'AfterTheDeadline')");
       System.out.println("                 'maxTextLength' - maximum text length, longer texts will cause an error (optional)");
       System.out.println("                 'maxCheckTimeMillis' - maximum time in milliseconds allowed per check (optional)");
+      System.out.println("                 'maxCheckThreads' - maximum number of threads working in parallel (optional)");
       printCommonOptions();
       System.exit(1);
     }
