@@ -72,6 +72,8 @@ LanguageTool Change Log
      * mode - 'LanguageTool' or 'AfterTheDeadline'
      * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
      NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.
+    -The new option 'maxCheckThreads' allows setting the maximum number of threads working
+     on requests in parallel. The default is 10, as it used to be.
 
 -Internals:
     -The compound rule now ignores tokens that have been immunized in the disambiguation.xml
